# wgsl-analyzer

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  RELEASES.md  SECURITY.md  TEST_INFRASTRUCTURE_SUMMARY.md  clippy.toml  commit_msg.txt  deny.toml  flake.nix  package.json  pnpm-workspace.yaml  rustfmt.toml  sample.wgsl  terrain_heightfield.wesl  tombi.toml  typos.toml  zizmor.yaml
benches/: Cargo.toml  README.md
benches/benches/: dummy.rs
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  editioned_file_id.rs  input.rs  lib.rs  line_index.rs  shader_processor.rs  translator.rs  util_types.rs
crates/hir/: Cargo.toml
crates/hir/src/: attrs.rs  database.rs  definition.rs  diagnostics.rs  display.rs  from_id.rs  has_source.rs  lib.rs  semantics.rs  source_analyzer.rs  symbols.rs  term_search.rs
crates/hir/src/diagnostics/: global_variable.rs  mod.rs  precedence.rs  shift_precedence.rs
crates/hir/src/semantics/: child_by_source.rs  source_to_def.rs
crates/hir/src/term_search/: expr.rs  tactics.rs
crates/hir_def/: Cargo.toml
crates/hir_def/src/: ast_id.rs  attributes.rs  attrs.rs  body.rs  data.rs  database.rs  db.rs  expr.rs  expression.rs  expression_store.rs  hir_file_id.rs  item_scope.rs  item_tree.rs  lib.rs  mod_path.rs  module_data.rs  name_resolution.rs  nameres.rs  resolver.rs  signature.rs  test_db.rs  tests.rs  type_ref.rs  type_specifier.rs  visibility.rs
crates/hir_def/src/body/: lower.rs  scope.rs
crates/hir_def/src/expression_store/: lower.rs  path.rs
crates/hir_def/src/item_tree/: lower.rs  pretty.rs  tests.rs
crates/hir_def/src/module_data/: lower.rs  mod.rs  pretty.rs
crates/hir_ty/: Cargo.toml  build.rs  builtins.txt  builtins.wgsl  builtins.wgsl.txt
crates/hir_ty/src/: builtins.rs  database.rs  db.rs  diagnostics.rs  function.rs  infer.rs  layout.rs  lib.rs  lower.rs  test_db.rs  tests.rs  ty.rs  validate.rs
crates/ide/: Cargo.toml
crates/ide-db/: Cargo.toml
crates/ide-db/src/: defs.rs  label.rs  lib.rs  source_change.rs  text_edit.rs  wgsl_attributes.rs  wgsl_builtin_types.rs
crates/ide-diagnostics/: Cargo.toml
crates/ide-diagnostics/src/: lib.rs  naga.rs  tests.rs  tint.rs
crates/ide/src/: db.rs  debug_command.rs  diagnostics.rs  fixture.rs  folding_ranges.rs  formatting.rs  goto_definition.rs  helpers.rs  hover.rs  inlay_hints.rs  lib.rs  markup.rs  navigation_target.rs  signature_help.rs  status.rs  syntax_tree.rs  tests.rs  typing.rs  view_module_graph.rs  view_package_graph.rs  view_syntax_tree.rs
crates/ide_completion/: Cargo.toml
crates/ide_completion/src/: completions.rs  config.rs  context.rs  item.rs  lib.rs  patterns.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cursor.rs  lib.rs  tests.rs  unescape.rs
crates/load-wesl/: Cargo.toml
crates/load-wesl/src/: lib.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: cst_builder.rs  event.rs  grammar.rs  lexer.rs  lexer2.rs  lib.rs  parser.rs  parser2.rs  sink.rs  source.rs  syntax_kind.rs  tests.rs  wesl.llw
crates/profile/: Cargo.toml
crates/profile/src/: google_cpu_profiler.rs  lib.rs  memory_usage.rs  stop_watch.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: env.rs  lib.rs  manifest_path.rs  package_graph.rs  package_interner.rs  project_json.rs  tests.rs  wesl_config_file.rs  wesl_package.rs  wesl_toml.rs  wesl_workspace.rs  workspace.rs
crates/stdx/: Cargo.toml
crates/stdx/src/: anymap.rs  assert.rs  lib.rs  macros.rs  non_empty_vec.rs  panic_context.rs  process.rs  rand.rs  thin_vec.rs  thread.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: algo.rs  algorithms.rs  ast.rs  lib.rs  pointer.rs  ptr.rs  range.rs  syntax_editor.rs  syntax_error.rs  syntax_node.rs  tests.rs
crates/test-fixture/: Cargo.toml
crates/test-fixture/src/: fixture.rs  lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: assert_linear.rs  bench_fixture.rs  fixture.rs  lib.rs  minicore.rs
crates/toolchain/: Cargo.toml
crates/toolchain/src/: lib.rs
crates/tt/: Cargo.toml
crates/tt/src/: buffer.rs  iter.rs  lib.rs
crates/vfs/: Cargo.toml
crates/vfs-notify/: Cargo.toml
crates/vfs-notify/src/: lib.rs
crates/vfs/src/: anchored_path.rs  file_set.rs  lib.rs  loader.rs  path_interner.rs  vfs_path.rs
crates/wgsl-analyzer/: Cargo.toml
crates/wgsl-analyzer/src/: cli.rs  config.rs  diagnostics.rs  discover.rs  dispatch.rs  global_state.rs  handlers.rs  in_memory_documents.rs  lib.rs  line_index.rs  lsp.rs  main_loop.rs  mem_docs.rs  op_queue.rs  operation_queue.rs  reload.rs  task_pool.rs  tests.rs  version.rs
crates/wgsl_analyzer/: Cargo.toml
crates/wgsl_analyzer/src/: capabilities.rs  config.rs  diagnostics.rs  dispatch.rs  from_proto.rs  global_state.rs  handlers.rs  lib.rs  line_index.rs  lsp_ext.rs  lsp_utils.rs  main_loop.rs  reload.rs  task_pool.rs  to_proto.rs
crates/wgsl_formatter/: Cargo.toml  DesignNotes.md  Formatting.md  Readme.md
crates/wgsl_formatter/benches/: large_file.rs  large_file.wesl
crates/wgsl_formatter/src/: ast_parse.rs  format.rs  generators.rs  helpers.rs  lib.rs  multiline_group.rs  print_item_buffer.rs  test_util.rs  tests.rs  util.rs
crates/wgsl_formatter/tests/: Readme.md
crates/wgsl_parser/: Cargo.toml
crates/wgsl_parser/src/: lib.rs  syntax_kind.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz/: Cargo.toml
fuzz/fuzz/fuzz_targets/: compares.rs
fuzz/src/: lib.rs
fuzz/tree-sitter-wgsl/: Cargo.toml  binding.gyp  fetch.mjs  package-lock.json  package.json
fuzz/tree-sitter-wgsl/src/: grammar.json  node-types.json  parser.c  scanner.c
tools/: Cargo.toml  publish.sh  update_version.sh
xtask/: Cargo.toml
xtask/src/: changelog.rs  codegen.rs  dist.rs  distribute.rs  flags.rs  install.rs  main.rs  pgo.rs  publish.rs  release.rs  tidy.rs  util.rs  utilities.rs
xtask/src/codegen/: assists_doc_tests.rs  diagnostics_docs.rs  feature_docs.rs  lints.rs  parser_inline_tests.rs
xtask/src/release/: changelog.rs
(+578 files in other folders)
