[workspace]
resolver = "2"
members = [
  # "lib/*",
  "crates/*",
  "xtask/",
]
exclude = []

[workspace.package]
authors = ["wgsl-analyzer team"]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/wgsl-analyzer/wgsl-analyzer"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# local crates
base-db = { path = "./crates/base_db", version = "0.0.0" }
# We need to freeze the version of the crate because the raw-api feature is considered unstable
dashmap = { version = "6.1.0", features = ["raw-api"] }
edition = { path = "./crates/edition", version = "0.0.0" }
hir = { path = "./crates/hir", version = "0.0.0" }
hir-def = { path = "./crates/hir_def", version = "0.0.0" }
hir-ty = { path = "./crates/hir_ty", version = "0.0.0" }
ide = { path = "./crates/ide", version = "0.0.0" }
ide-completion = { path = "./crates/ide_completion", version = "0.0.0" }
ide-db = { path = "./crates/ide-db", version = "0.0.0" }
parser = { path = "./crates/parser", version = "0.0.0" }
paths = { git = "https://github.com/rust-lang/rust-analyzer", rev = "a31e10a2fdc585e9d7ea0857cacfd322dd478070", version = "0.0.0" }
profile = { path = "./crates/profile", version = "0.0.0" }
query-group = { package = "query-group-macro", git = "https://github.com/rust-lang/rust-analyzer", rev = "a31e10a2fdc585e9d7ea0857cacfd322dd478070", version = "0.0.0" }
stdx = { path = "./crates/stdx", version = "0.0.0" }
syntax = { path = "./crates/syntax", version = "0.0.0" }
test-utils = { path = "./crates/test-utils", version = "0.0.0" }
vfs = { git = "https://github.com/rust-lang/rust-analyzer", rev = "a31e10a2fdc585e9d7ea0857cacfd322dd478070", version = "0.0.0" }
wgsl-types = { version = "0.2.0", git = "https://github.com/wgsl-tooling-wg/wesl-rs", features = ["naga-ext"] }
# rust-analyzer crates
vfs-notify = { git = "https://github.com/rust-lang/rust-analyzer", rev = "a31e10a2fdc585e9d7ea0857cacfd322dd478070", version = "0.0.0" }
wgsl-analyzer = { path = "./crates/wgsl-analyzer", version = "0.0.0" }
wgsl-formatter = { path = "./crates/wgsl_formatter", version = "0.0.0" }
wgslfmt = { path = "./crates/wgslfmt", version = "0.0.0" }

[workspace.lints.clippy]
# often hurts readability
absolute_paths = "allow"
# does not allow test module to be at bottom of file
arbitrary_source_item_ordering = "allow"
# not a good general rule for the cost it entails
arithmetic_side_effects = "allow"
# makes it easier to keep up to date with new lints
blanket_clippy_restriction_lints = "allow"
cargo = { level = "warn", priority = -2 }
# not important
cargo_common_metadata = "allow"
cast_precision_loss = "allow"
complexity = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
# needs to be determined on a case-by-case basis
default_numeric_fallback = "allow"
# conflicting with redundant_else
else_if_without_else = "allow"
# wgsl-analyzer has no stability commitment
exhaustive_enums = "allow"
# wgsl-analyzer has no stability commitment
exhaustive_structs = "allow"
expect_used = "allow"
# unwanted restriction
field_scoped_visibility_modifiers = "allow"
# is fine
float_arithmetic = "allow"
# unidiomatic
implicit_return = "allow"
# prefer get().expect() so that the reason is documented
indexing_slicing = "allow"
# incorrect
items_after_statements = "allow"
iter_over_hash_type = "allow"
# always covered by min_ident_chars
many_single_char_names = "allow"
missing_assert_message = "allow"
# TODOs
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
# is this helpful enough?
missing_inline_in_public_items = "allow"
# antipattern
missing_trait_methods = "allow"
module_name_repetitions = "allow"
# not under this crate's control
multiple_crate_versions = "allow"
multiple_inherent_impl = "allow"
nursery = { level = "warn", priority = -2 }
# nursery, ugly suggestions
option_if_let_else = "allow"
panic = "allow"
panic_in_result_fn = "allow"
pattern_type_mismatch = "allow"
pedantic = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
# often useful
pub_use = "allow"
# style preference
pub_with_shorthand = "allow"
# unidiomatic
question_mark_used = "allow"
# unwanted restriction
redundant_pub_crate = "allow"
restriction = { level = "warn", priority = -2 }
# style preference
self_named_module_files = "allow"
# style preference
semicolon_outside_block = "allow"
# style preference
separated_literal_suffix = "allow"
# often useful
shadow_reuse = "allow"
# do not care
shadow_unrelated = "allow"
# good for organization
single_call_fn = "allow"
# no no_std support
std_instead_of_alloc = "allow"
# no no_std support
std_instead_of_core = "allow"
string_slice = "allow"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -2 }
suspicious = { level = "warn", priority = -2 }
unwrap_in_result = "allow"
unwrap_used = "allow"

[workspace.lints.rust]
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }
# TODO still prototyping
unused = { level = "allow", priority = 1 }
warnings = { level = "warn", priority = -2 }

[profile.dev]
debug = 1

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
rustc-hash.opt-level = 3
salsa.opt-level = 3
serde.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
# This speeds up `cargo xtask dist`.
# miniz_oxide.opt-level = 3

[profile.release]
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0
incremental = true

[profile.dev-rel]
inherits = "release"
debug = 2

