[package]
name = "benches"
edition = "2021"
description = "Benchmarks that test performance"
publish = false
license = "MIT OR Apache-2.0"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
criterion = { version = "0.3", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "dummy"
path = "benches/dummy.rs"
harness = false
