[package]
name = "benches"
description = "Benchmarks that test performance"
publish = false
readme = "README.md"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["wgsl"]

[dev-dependencies]
rand = "0.9.0"
rand_chacha = "0.9.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "dummy"
path = "benches/dummy.rs"
harness = false
