[package]
name = "tools"
version = "0.0.0"
readme = "README.md"
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["tool"]
categories = ["Development tools"]
description = "tools to aid in CI or local development"

[dependencies]
anyhow = "1.0.95"
lexopt = "0.3.0"
xshell = "0.2.7"
serde_json = "1.0.138"
