[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "MIT OR Apache-2.0"
publish = false

# Avoid adding more dependencies to this crate
[dependencies]
anyhow.workspace = true
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.47", default-features = false }
write-json = "0.1.4"
xflags = "0.3.2"
xshell = "0.2.7"
zip = { version = "8.5.1", default-features = false, features = [
	"deflate",
	"time",
] }

[lints]
workspace = true
