[package]
name = "base-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Basic database traits for wgsl-analyzer. The concrete DB is defined by `ide` (aka `wa_ap_ide`)."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
edition.workspace = true
la-arena = "0.3.1"
# span.workspace = true
# rust-analyzer libs
line-index.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
semver = "1.0.27"
syntax.workspace = true
tracing = "0.1.41"
triomphe.workspace = true
vfs.workspace = true

[lints]
workspace = true
