[package]
name = "base-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Basic database traits for wgsl-analyzer. The concrete DB is defined by `ide` (aka `wa_ap_ide`)."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
dashmap.workspace = true
query-group.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
syntax.workspace = true
triomphe.workspace = true
vfs.workspace = true

[lints]
workspace = true
