[package]
name = "hir"
version = "0.0.0"
repository.workspace = true
description = "A high-level object-oriented access to code for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either = "1.15.0"
hir-def.workspace = true
hir-ty.workspace = true
syntax.workspace = true
tracing = "0.1.41"
la-arena = "0.3.1"
smallvec = { version = "1.15.1", features = [
  "const_new",
  "union",
  "const_generics",
] }
vfs.workspace = true
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
