[package]
name = "hir"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A high-level object-oriented access to code for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either = "1.15.0"
hir-def.workspace = true
hir-ty.workspace = true
la-arena = "0.3.1"
smallvec = { version = "1.15.1", features = [
  "const_generics",
  "const_new",
  "union",
] }
stdx.workspace = true
syntax.workspace = true
tracing = "0.1.41"
triomphe = { version = "0.1.15", default-features = false, features = ["std"] }
vfs.workspace = true

[lints]
workspace = true
