[package]
name = "hir"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "A high-level object-oriented access to code for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
smallvec.workspace = true
stdx.workspace = true
syntax.workspace = true
tracing.workspace = true
triomphe.workspace = true

[lints]
workspace = true
