[package]
name = "hir-def"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "RPC Api for the `proc-macro-srv` crate of wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either.workspace = true
la-arena.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smol_str.workspace = true
syntax.workspace = true
triomphe.workspace = true
vfs.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
