[package]
name = "hir-def"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "RPC API for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either.workspace = true
la-arena.workspace = true
query-group.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
smallvec.workspace = true
smol_str.workspace = true
syntax.workspace = true
triomphe.workspace = true
vfs.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-fixture.workspace = true

[lints]
workspace = true
