[package]
name = "hir-ty"
version = "0.0.0"
repository.workspace = true
description = "The type system for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir-def.workspace = true

salsa.workspace = true
la-arena.workspace = true
either.workspace = true
rustc-hash.workspace = true
itertools.workspace = true
smallvec.workspace = true
wgsl-types.workspace = true

[lints]
workspace = true
