[package]
name = "hir-ty"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "The type system for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either.workspace = true
hir-def.workspace = true
itertools.workspace = true
la-arena.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
syntax.workspace = true
triomphe.workspace = true
vfs.workspace = true
wgsl-types.workspace = true

[dev-dependencies]
expect-test.workspace = true

[lints]
workspace = true
