[package]
name = "ide-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "IDE Database of wgsl-analyzer"
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
vfs.workspace = true

[lints]
workspace = true
