[package]
name = "ide-db"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "IDE Database of wgsl-analyzer"
repository.workspace = true
license.workspace = true

[package.metadata.cargo-shear]
ignored = ["salsa-macros"]  # the query_group macro expansion uses this

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir-def.workspace = true
itertools.workspace = true
line-index.workspace = true
query-group.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
salsa-macros.workspace = true
triomphe.workspace = true
vfs.workspace = true

[lints]
workspace = true
