[package]
name = "ide-diagnostics"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Diagnostics rendering and fixits for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-def.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-ty.workspace = true
ide-db.workspace = true
itertools.workspace = true
line-index.workspace = true
naga27 = { package = "naga", version = "27.0.3", features = ["wgsl-in"] }
naga28 = { package = "naga", version = "28.0.0", features = ["wgsl-in"] }
naga29 = { package = "naga", version = "29.0.1", features = ["wgsl-in"] }
nagamain = {
	package = "naga",
	git = "https://github.com/gfx-rs/wgpu",
	rev = "ff438f3cadb8a25e0f36409566a6fb50f6707e02",
	version = "29.0.0",
	features = [
		"wgsl-in",
	]
}
paths.workspace = true
rowan.workspace = true
serde.workspace = true
serde_json.workspace = true
syntax.workspace = true
toolchain.workspace = true
vfs.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-fixture.workspace = true

[lints]
workspace = true
