[package]
name = "ide"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Core data structure representing IDE state for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]

# tombi: format.rules.table-keys-order.disabled = true
[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
either.workspace = true
indexmap.workspace = true
itertools.workspace = true
line-index.workspace = true
naga22 = { package = "naga", version = "22.1.0", features = ["wgsl-in"] }
naga27 = { package = "naga", version = "27.0.3", features = ["wgsl-in"] }
nagamain = { package = "naga", git = "https://github.com/gfx-rs/wgpu", rev = "2a58599dc4a2a3ba565c0540c5c45e41bc3d25e3", version = "27.0.0", features = [
	"wgsl-in",
] }
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smol_str.workspace = true
tracing.workspace = true
triomphe.workspace = true
# local deps
ide-completion.workspace = true
ide-db.workspace = true
stdx.workspace = true
syntax.workspace = true
# span.workspace = true
vfs.workspace = true
wgsl-formatter.workspace = true
# ide should depend only on the top-level `hir` package. if you need
# something from some `hir-xxx` subpackage, reexport the API via `hir`.
# todo: remove this dependency by re-exporting the API via `hir`
base-db.workspace = true
hir.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-def.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-ty.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-utils.workspace = true

# local deps
# test-utils.workspace = true
# test-fixture.workspace = true

[lints]
workspace = true
