[package]
name = "ide"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Core data structure representing IDE state for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]

# tombi: format.rules.table-keys-order.disabled = true
[dependencies]
dot.workspace = true
itertools.workspace = true
line-index.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
smallvec.workspace = true
smol_str.workspace = true
triomphe.workspace = true
# local dependencies
ide-completion.workspace = true
ide-diagnostics.workspace = true
ide-db.workspace = true
syntax.workspace = true
# span.workspace = true
vfs.workspace = true
wgsl-formatter.workspace = true
stdx.workspace = true
# ide should depend only on the top-level `hir` package. if you need
# something from some `hir-xxx` subpackage, reexport the API via `hir`.
# todo: remove this dependency by re-exporting the API via `hir`
base-db.workspace = true
hir.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-def.workspace = true
# todo: remove this dependency by re-exporting the API via `hir`
hir-ty.workspace = true

[dev-dependencies]
expect-test.workspace = true
test-fixture.workspace = true
test-utils.workspace = true

[lints]
workspace = true
