[package]
name = "ide-completion"
version = "0.0.0"
repository.workspace = true
description = "Utilities for generating completions of user input for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir.workspace = true
hir-ty.workspace = true
hir-def.workspace = true
syntax.workspace = true
tracing.workspace = true
stdx.workspace = true
ide-db.workspace = true

itertools.workspace = true
either.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
smallvec.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints.rust]
unused = { level = "allow", priority = 1 }
