[package]
name = "ide-completion"
version = "0.0.0"
repository.workspace = true
description = "Utilities for generating completions of user input for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
hir.workspace = true
hir-ty.workspace = true
hir-def.workspace = true
syntax.workspace = true
tracing = "0.1.41"
stdx.workspace = true
ide-db.workspace = true

itertools = "0.14.0"
either = "1.15.0"
rowan = "0.16.1"
rustc-hash = "2.1.1"
smol_str = "0.3.2"
smallvec = { version = "1.15.1", features = [
  "const_new",
  "union",
  "const_generics",
] }

[dev-dependencies]
proptest = "1.7.0"

[lints]
workspace = true
