[package]
name = "ide-completion"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Utilities for generating completions of user input for wgsl-analyzer."
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
base-db.workspace = true
either.workspace = true
hir.workspace = true
hir-def.workspace = true
hir-ty.workspace = true
ide-db.workspace = true
itertools.workspace = true
rowan.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
smol_str.workspace = true
stdx.workspace = true
syntax.workspace = true
tracing.workspace = true

[lints]
workspace = true
