[package]
name = "lexer"
version = "0.0.0"
repository.workspace = true
description = "The WGSL lexer for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
parser.workspace = true

[dev-dependencies]
expect-test.workspace = true
