[package]
name = "lexer"
version = "0.0.0"
repository.workspace = true
description = "The WGSL lexer for wgsl-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
parser.workspace = true
unicode-xid = "0.2.6"
memchr = "2.7.4"

[dependencies.unicode-properties]
version = "0.1.3"
default-features = false
features = ["emoji"]

[dev-dependencies]
expect-test.workspace = true
